# zcash_aztec_private_swaps

./: .gitmodules  Makefile  README.md  docker-compose.yml  package.json
aztec-solver/: deployment.json  mint_tokens.ts  package.json
aztec-solver/scripts/: balance_tokens.ts  deploy_token.ts  pay_reciever.ts
aztec-solver/src/: app.ts
aztec-web-app/: Dockerfile  index.html  package-lock.json  package.json
contract/: Nargo.toml  codegenCache.json
contract/artifacts/: PrivatePayment.ts
contract/src/: main.nr  types.nr
scripts/: README.md  balance_tokens.ts  create_partial_note.ts  deploy_payment_contract.ts  deploy_token.ts  deployment.json  mint_tokens.ts  package.json  pay_reciever.ts
scripts/artifacts/: Token.ts
solver/: Dockerfile  package.json
solver/data/: deployment.json
solver/scripts/: deploy_escrow.sh  deploy_payment_contract.ts  deploy_token.ts  mint_tokens.ts
solver/src/: app.ts
web-app/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
web-app/src/: main.ts  storage.ts  style.css
web-app/src/views/: aztec.ts  zcash.ts
working_backend/artifacts/: PrivatePayment.ts
working_backend/scripts/: balance_tokens.ts  deploy_payment_contract.ts
zcash-client/: .env.example  Cargo.toml  Dockerfile
zcash-client/src/: main.rs
zcash-web-app/: Dockerfile  index.html  package.json
zcash-web-app/src/: main.ts  style.css
zcash-web-wallet/: .env.example  package-lock.json  package.json
