[package]
name = "zcash-client"
version = "0.1.0"
edition = "2024"

[dependencies]
webzjs-wallet  = {  git = "https://github.com/ChainSafe/WebZjs.git", package = "webzjs-wallet" }
webzjs-common = { git = "https://github.com/ChainSafe/WebZjs.git", package = "webzjs-common" }

prost = { version = "0.12" }
tonic = { version = "0.12", features = ["prost", "tls-native-roots"] }

zcash_client_backend = { git = "https://github.com/ChainSafe/librustzcash", rev = "46e8ee0937b61fdbb417df7c663f62e6945d8090", default-features = false, features = ["sync", "lightwalletd-tonic", "wasm-bindgen", "orchard"] }
zcash_client_memory = { git = "https://github.com/ChainSafe/librustzcash", rev = "46e8ee0937b61fdbb417df7c663f62e6945d8090", features = ["orchard", "transparent-inputs"] }
zcash_protocol = { git = "https://github.com/ChainSafe/librustzcash", rev = "46e8ee0937b61fdbb417df7c663f62e6945d8090", default-features = false }

tokio = { version = "1.0", features = ["rt", "macros"] }

[patch.crates-io]
orchard = { git = "https://github.com/zcash/orchard.git", rev = "4fa6d3b549f8803016a309281404eab095d04de8" }
sapling = { package = "sapling-crypto", git = "https://github.com/zcash/sapling-crypto.git", rev = "3c2235747553da642fb142d1eeb9b1afa8391987" }
