[package]
name = "zcash-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zcash-client"
path = "src/main.rs"

[dependencies]
# WebZjs dependencies
webzjs-wallet = { git = "https://github.com/bajpai244/WebZjs" }
webzjs-common = { git = "https://github.com/bajpai244/WebZjs" }
webzjs-keys = { git = "https://github.com/bajpai244/WebZjs" }
webzjs-requests = { git = "https://github.com/bajpai244/WebZjs" }

# gRPC dependencies
prost = { version = "0.12", default-features = false }
tonic = { version = "0.12", default-features = false, features = ["prost", "tls-native-roots"] }

# Zcash dependencies
zcash_client_backend = { git = "https://github.com/ChainSafe/librustzcash", rev = "46e8ee0937b61fdbb417df7c663f62e6945d8090", default-features = false, features = ["sync", "lightwalletd-tonic", "wasm-bindgen", "orchard", "pczt", "transparent-inputs"] }
zcash_client_memory = { git = "https://github.com/ChainSafe/librustzcash", rev = "46e8ee0937b61fdbb417df7c663f62e6945d8090", features = ["orchard", "transparent-inputs"] }
zcash_protocol = { git = "https://github.com/ChainSafe/librustzcash", rev = "46e8ee0937b61fdbb417df7c663f62e6945d8090", default-features = false }
zcash_keys = { git = "https://github.com/ChainSafe/librustzcash", rev = "46e8ee0937b61fdbb417df7c663f62e6945d8090", features = ["transparent-inputs", "orchard", "sapling", "unstable"] }
zcash_primitives = { git = "https://github.com/ChainSafe/librustzcash", rev = "46e8ee0937b61fdbb417df7c663f62e6945d8090" }
zcash_address = { git = "https://github.com/ChainSafe/librustzcash", rev = "46e8ee0937b61fdbb417df7c663f62e6945d8090" }
zcash_proofs = { git = "https://github.com/ChainSafe/librustzcash", rev = "46e8ee0937b61fdbb417df7c663f62e6945d8090", default-features = false, features = ["bundled-prover", "multicore"] }
zip321 = { git = "https://github.com/ChainSafe/librustzcash", rev = "46e8ee0937b61fdbb417df7c663f62e6945d8090" }
zip32 = { version = "0.1.3" }
pczt = { git = "https://github.com/ChainSafe/librustzcash", rev = "46e8ee0937b61fdbb417df7c663f62e6945d8090", default-features = false, features = ["orchard", "sapling", "transparent"] }
sapling = { package = "sapling-crypto", version = "0.4", default-features = false }

# Other dependencies
tokio = { version = "1.0", features = ["full", "rt", "macros"] }
hex = "0.4.3"
dotenvy = "0.15"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1.5.0"
thiserror = "1.0.63"
tracing = "0.1.40"
futures-util = "0.3.30"

[patch.crates-io]
# Also patching for pczt improvements
# See: https://github.com/zcash/librustzcash/pull/1661
orchard = { git = "https://github.com/zcash/orchard.git", rev = "4fa6d3b549f8803016a309281404eab095d04de8" }
sapling = { package = "sapling-crypto", git = "https://github.com/zcash/sapling-crypto.git", rev = "3c2235747553da642fb142d1eeb9b1afa8391987" }
